syntax = "proto3";
package kratos.api;

option go_package = "github.com/lunzi/aacs/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message OTEL {
    string addr = 1;
    float fraction = 2;
  }
  HTTP http = 1;
  GRPC grpc = 2;
  string root_app_id = 3;
  OTEL otel = 4;
  bool page_debug = 5;
}

message Data {
  message PG {
    string dsn = 1;
  }
  message Redis {
    string addr = 1;
    string pwd = 2;
    int32 db_index = 3;
  }
  message WeCom {
    string agent_id = 1;
    string corp_id = 2;
    string corp_sk = 3;
  }
  message Ident {
    string host = 1;
  }
  Redis redis = 2;
  PG pg = 4;
  WeCom wecom = 5;
  repeated Ident idents = 6;
}
